added dialog for back-button + pausing timer during dialog

--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -8,6 +8,11 @@
     android:layout_alignParentTop="true"
     android:background="#666">
 
+    <com.example.nils.rhymetime.CustomEditText
+        android:id="@+id/CEditText"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
