--- a/app/src/main/res/layout/activity_score_overview.xml
+++ b/app/src/main/res/layout/activity_score_overview.xml
@@ -10,180 +10,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nils.rhymetime.ScoreOverviewActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="THIS IS STILL UNDER CONSTRUCTION"
-        android:id="@+id/UN"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sample code for displaying scores"
+        android:text="See scores below"
         android:id="@+id/sample"
-        android:layout_below="@id/UN"
         android:layout_marginTop="10dp"/>
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/sample"
-        android:layout_marginTop="20dp">
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scoreListView">
+    </ListView>
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="#"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="score"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="# words"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="difficulty"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="1."
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="3783"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="7"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:text="Easy"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2."
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2783"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Medium"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3."
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2583"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Medium"
-                android:textSize="18dp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"/>
-        </TableRow>
-    </TableLayout>
 
 </RelativeLayout>
