added FireBase Authentication

--- a/app/src/main/res/layout/activity_score_overview.xml
+++ b/app/src/main/res/layout/activity_score_overview.xml
@@ -10,18 +10,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nils.rhymetime.ScoreOverviewActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:id="@+id/refreshButton"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="See scores below"
+        android:text="See global leaderboard below"
         android:id="@+id/sample"
         android:layout_marginTop="10dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Score"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="#Words"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stage"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username"/>
+    </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scoreListView">
+        android:id="@+id/scoreListView"
+        android:layout_marginTop="100dp">
     </ListView>
 
 
