--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-tools:context="com.example.nils.rhymetime.MainActivity"
-android:id="@+id/activity_main"
-android:orientation="vertical"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_alignParentTop="true"
-android:background="#666">
-
-<View
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.nils.rhymetime.MainActivity"
+    android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:layout_marginTop="135dp"
-    android:background="#FFF" />
+    android:layout_height="match_parent"
+    android:layout_alignParentTop="true"
+    android:background="#666">
 
-<Button
-    android:text="@string/play"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:id="@+id/playButton"
-    style="@style/grey"
-    android:onClick="goToPlayOverview"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcomeTV"
+        android:text="Currently not signed in."
+        android:textStyle="italic"
+        android:textColor="#191919"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal" />
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="#FFF" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="135dp"
+        android:background="#FFF" />
 
-<Button
-    android:text="@string/my_scores"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:id="@+id/myscoresButton"
-    style="@style/grey"
-    android:onClick="goToScoreOverview"/>
+    <Button
+        android:text="@string/play"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:id="@+id/playButton"
+        style="@style/grey"
+        android:onClick="goToPlayOverview"/>
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="#FFF" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFF" />
 
-<Button
-    android:text="@string/achievements"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:id="@+id/achievementsButton"
-    style="@style/grey"
-    android:onClick="goToAchievements"/>
+    <Button
+        android:text="@string/my_scores"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:id="@+id/myscoresButton"
+        style="@style/grey"
+        android:onClick="goToScoreOverview"/>
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="#FFF" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFF" />
 
-<Button
-    android:text="@string/instructions"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:id="@+id/instructionsButton"
-    style="@style/grey"
-    android:onClick="goToInstructions"/>
+    <Button
+        android:text="@string/achievements"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:id="@+id/achievementsButton"
+        style="@style/grey"
+        android:onClick="goToAchievements"/>
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="#FFF" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFF" />
+
+    <Button
+        android:text="@string/instructions"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:id="@+id/instructionsButton"
+        style="@style/grey"
+        android:onClick="goToInstructions"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFF" />
+
 </LinearLayout>
